# athena-code-creator

./: README.md  example_README.md  pyproject.toml  useful_development_functions.md
example/: README.md
mnt/data/: hello.sh
src/athena_code_creator/: __main__.py  config.py  main.py  oa.py  tool_functions.py
src/athena_code_creator/cli/: __init__.py  assistant.py  chat.py  cli.py  thread.py  ui.py
