[project]
name = "athena-code-creator"
version = "0.1.0"
description = "Code creation assistant"
authors = [
    {name = "Dylan Evans", email = "dylan@dje.me"},
]
dependencies = [
    "openai>=1.6.0",
    "click>=8.1.7",
    "rich>=13.7.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
acc = "athena_code_creator.cli.cli:cli"

[tool.pdm]
package-type = "application"
